Added new links - portfolio websites

--- a/#src/html/sections/_portfolio.html
+++ b/#src/html/sections/_portfolio.html
@@ -4,9 +4,26 @@
 
     <div class="portfolio__container container swiper">
         <div class="swiper-wrapper">
-            <!-- Portfolio 1 -->
+            <!-- Portfolio -->
             <div class="portfolio__content grid swiper-slide">
-                <img src="icons/Halloween.webp" alt="My Work 1" class="portfolio__img">
+                <img src="icons/Watches.webp" alt="My Work 1" class="portfolio__img">
+
+                <div class="portfolio__data">
+                    <h3 class="portfolio__title">Watches - Website</h3>
+                    <p class="portfolio__description">
+                        Весь стек технологий, применяемых при разработке данного сайта, описан в README.md файле
+                    </p>
+                    
+                    <a href="https://github.com/JuniorPita/watches-project-completed" target="_blank" class="button button-flex button-small portfolio__button">
+                        Перейти
+                        <i class="ri-arrow-right-line button__icon"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Portfolio -->
+            <div class="portfolio__content grid swiper-slide">
+                <img src="icons/Halloween.webp" alt="My Work 2" class="portfolio__img">
 
                 <div class="portfolio__data">
                     <h3 class="portfolio__title">Halloween - Website</h3>
@@ -21,9 +38,9 @@
                 </div>
             </div>
 
-            <!-- Portfolio 2 -->
+            <!-- Portfolio -->
             <div class="portfolio__content grid swiper-slide">
-                <img src="icons/Garden.webp" alt="My Work 2" class="portfolio__img">
+                <img src="icons/Garden.webp" alt="My Work 3" class="portfolio__img">
 
                 <div class="portfolio__data">
                     <h3 class="portfolio__title">MyGarden - Website</h3>
@@ -38,9 +55,9 @@
                 </div>
             </div>
 
-            <!-- Portfolio 3 -->
+            <!-- Portfolio -->
             <div class="portfolio__content grid swiper-slide">
-                <img src="icons/Timer.webp" alt="My Work 3" class="portfolio__img">
+                <img src="icons/Timer.webp" alt="My Work 4" class="portfolio__img">
 
                 <div class="portfolio__data">
                     <h3 class="portfolio__title">NewYear - Tool</h3>
@@ -55,9 +72,9 @@
                 </div>
             </div>
 
-            <!-- Portfolio 4 -->
+            <!-- Portfolio -->
             <div class="portfolio__content grid swiper-slide">
-                <img src="icons/ToDoList.webp" alt="My Work 4" class="portfolio__img">
+                <img src="icons/ToDoList.webp" alt="My Work 5" class="portfolio__img">
 
                 <div class="portfolio__data">
                     <h3 class="portfolio__title">ToDo - Tool</h3>
@@ -72,9 +89,9 @@
                 </div>
             </div>
 
-            <!-- Portfolio 5 -->
+            <!-- Portfolio -->
             <div class="portfolio__content grid swiper-slide">
-                <img src="icons/Travel.webp" alt="My Work 5" class="portfolio__img">
+                <img src="icons/Travel.webp" alt="My Work 6" class="portfolio__img">
 
                 <div class="portfolio__data">
                     <h3 class="portfolio__title">Travel - Website</h3>
